TypedLama/regression/negative/test005.1.lama
-- Haskell-style typing

-- Issue: переопределение типа дважды
-- Решение: запретить в одном Scope дважды определять тип одного и того же символа.
pred :: Int -> Int;
pred :: Str -> Str;
local pred = fun (x) {
  x - 1
};